--- a/main.html
+++ b/main.html
@@ -10,7 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h1> Kedarnath</h1>
+	<p> Kedarnath is a town and Nagar Panchayat in Rudraprayag district of Uttarakhand, India, known primarily for the Kedarnath Temple. It is approximately 86 kilometres from Rudraprayag, the district headquarter. Kedarnath is the most remote of the four Chota Char Dham pilgrimage sites.</p>
+	<br/>
+	<ol>
+		<li><strong><em>kedarnath temple</em></strong> </li>
+		<li><strong><em> Adi Shankaracharya Samadhi </em></strong> </li>
+		<li><strong><em> Shri Bhairavnath Temple </em></strong> </li>
+		<li><strong><em> Guptkashi </em></strong> </li>
+		<li><strong><em>  Tungnath </em></strong> </li>
+	</ol>
+	<ul>
+		<li><strong><em> Kumauni Raita </em></strong> </li>
+		<li><strong><em> Paneer tikka masala </em></strong> </li>
+		<li><strong><em> Dal makhani </em></strong> </li>
+		<li><strong><em> Barfi </em></strong> </li>
+		<li><strong><em> paratha </em></strong> </li>
+	</ul>
 </body>
 
 </html>
