--- a/main.html
+++ b/main.html
@@ -23,10 +23,10 @@
 	</ol>
 	<ul>
 		<li><strong><em> Kumauni Raita </em></strong> </li>
-<!-- 		<li><strong><em> Paneer tikka masala </em></strong> </li>
+		<li><strong><em> Paneer tikka masala </em></strong> </li>
 		<li><strong><em> Dal makhani </em></strong> </li>
 		<li><strong><em> Barfi </em></strong> </li>
-		<li><strong><em> paratha </em></strong> </li> -->
+		<li><strong><em> paratha </em></strong> </li>
 	</ul>
 </body>
 
