--- a/main.html
+++ b/main.html
@@ -22,11 +22,11 @@
 		<li><strong><em>  Tungnath </em></strong> </li>
 	</ol>
 	<ul>
-		<li><strong><em> Kumauni Raita </em></strong> </li>
-		<li><strong><em> Paneer tikka masala </em></strong> </li>
-		<li><strong><em> Dal makhani </em></strong> </li>
-		<li><strong><em> Barfi </em></strong> </li>
-		<li><strong><em> paratha </em></strong> </li>
+		<li><b><i> Kumauni Raita </i></b> </li>
+		<li><b><i> Paneer tikka masala </i></b> </li>
+		<li><b><i> Dal makhani </i></b> </li>
+		<li><b><i> Barfi </i></b> </li>
+		<li><b><i> paratha </i></b> </li>
 	</ul>
 </body>
 
